pub mod authorization_request {
    tonic::include_proto!("caretta_sync.authorization_request");
}
pub mod authorized_node {
    tonic::include_proto!("caretta_sync.authorized_node");
}
pub mod common {
    tonic::include_proto!("caretta_sync.common");
}

pub mod remote_node {
    tonic::include_proto!("caretta_sync.remote_node");
}